refactored route naming convention
