# storage/api-docs/api-docs.json
@@ -6,7 +6,7 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/articles": {
+        "/api/v1/articles": {
             "get": {
                 "tags": [
                     "Articles"
@@ -72,7 +72,7 @@
                 ]
             }
         },
-        "/api/articles/{article}": {
+        "/api/v1/articles/{article}": {
             "get": {
                 "tags": [
                     "Articles"
@@ -106,7 +106,7 @@
                 ]
             }
         },
-        "/api/articles/search": {
+        "/api/v1/articles/search": {
             "get": {
                 "tags": [
                     "Articles"
@@ -170,7 +170,7 @@
                 ]
             }
         },
-        "/api/auth/register": {
+        "/api/v1/auth/register": {
             "post": {
                 "tags": [
                     "Authentication"
@@ -254,7 +254,7 @@
                 }
             }
         },
-        "/api/auth/login": {
+        "/api/v1/auth/login": {
             "post": {
                 "tags": [
                     "Authentication"
@@ -327,7 +327,7 @@
                 }
             }
         },
-        "/api/auth/reset-password": {
+        "/api/v1/auth/reset-password": {
             "post": {
                 "tags": [
                     "Authentication"
@@ -398,7 +398,7 @@
                 }
             }
         },
-        "/api/logout": {
+        "/api/v1/logout": {
             "post": {
                 "tags": [
                     "Authentication"
@@ -431,7 +431,7 @@
                 ]
             }
         },
-        "/api/preferences": {
+        "/api/v1/preferences": {
             "get": {
                 "tags": [
                     "User Preferences"
@@ -535,7 +535,7 @@
                 ]
             }
         },
-        "/api/personalized-feed": {
+        "/api/v1/personalized-feed": {
             "get": {
                 "tags": [
                     "User Preferences"
